// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StyledInputFormikField With Zod schema automatically adds attributes from Zod schema 1`] = `
<div>
  <div>
    <div
      data-cy="InputField-myAttribute"
    >
      <div>
        <input
          font-size="14px"
          id="input-myAttribute"
          maxlength="100"
          minlength="10"
          name="myAttribute"
          required=""
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`StyledInputFormikField With Zod schema automatically adds attributes from Zod schema on nested field 1`] = `
<div>
  <div>
    <div
      data-cy="InputField-my.nested.attribute"
    >
      <div>
        <input
          font-size="14px"
          id="input-my.nested.attribute"
          maxlength="100"
          minlength="10"
          name="my.nested.attribute"
          required=""
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`StyledInputFormikField With Zod schema automatically adds attributes from Zod schema on nullable field 1`] = `
<div>
  <div>
    <div
      data-cy="InputField-myAttribute"
    >
      <div>
        <input
          font-size="14px"
          id="input-myAttribute"
          name="myAttribute"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`StyledInputFormikField With Zod schema automatically adds attributes from Zod schema on number field 1`] = `
<div>
  <div>
    <div
      data-cy="InputField-myAttribute"
    >
      <div>
        <input
          font-size="14px"
          id="input-myAttribute"
          max="100"
          min="10"
          name="myAttribute"
          required=""
          type="number"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`StyledInputFormikField With Zod schema automatically adds attributes from Zod schema on optional field 1`] = `
<div>
  <div>
    <div
      data-cy="InputField-myAttribute"
    >
      <div>
        <input
          font-size="14px"
          id="input-myAttribute"
          name="myAttribute"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`StyledInputFormikField renders default options 1`] = `
<div>
  <div>
    <div
      data-cy="InputField-myAttribute"
    >
      <div>
        <input
          font-size="14px"
          id="input-myAttribute"
          name="myAttribute"
        />
      </div>
    </div>
  </div>
</div>
`;
